content/networking/networking-overview/arm/hubandspoke_simple.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "admin_user": {
            "type": "string",
            "defaultValue": "azureuser",
            "metadata": {
                "description": "Username for authentication on the Linux VMs"
            }
        },
        "admin_password": {
            "type": "securestring",
            "metadata": {
                "description": "Password for authentication on the Linux VMs"
            }
        }
    },
    "variables": {
        "network_api_version": "2020-11-01",
        "compute_api_version": "2022-03-01",
        "hub_vnet_name": "hub-vnet",
        "hub_vnet_prefix": "192.168.0.0/24",
        "hub_subnet_name": "vm",
        "hub_subnet_prefix": "192.168.0.0/26",
        "hubvm_name": "hubvm",
        "hubvm_nic_name": "hubvm-nic",
        "hubvm_nic_ip": "192.168.0.4",
        "hubvm_nsg_name": "hubvm-nsg",
        "hubvm_pip_name": "hubvm-pip",
        "hubvm_custom_data": "[concat('#!/bin/bash\n', 'sysctl -w net.ipv4.ip_forward=1\n', 'iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE\n')]",
        "spoke_vnet_name": "spoke-vnet",
        "spoke_vnet_prefix": "192.168.1.0/24",
        "spoke_subnet_name": "vm",
        "spoke_subnet_prefix": "192.168.1.0/26",
        "spokevm_name": "spokevm",
        "spokevm_rt_name": "spokevm-rt",
        "spokevm_nic_name": "spokevm-nic",
        "spokevm_nsg_name": "spokevm-nsg",
        "spokevm_pip_name": "spokevm-pip"
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('hubvm_nsg_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "Allow_Inbound_From_RFC1918",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [
                                "10.0.0.0/8",
                                "172.16.0.0/12",
                                "192.168.0.0/16"
                            ],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('spokevm_nsg_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('hubvm_pip_name')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "zones": [
                "1",
                "2",
                "3"
            ],
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('spokevm_pip_name')]",
            "location": "[resourceGroup().location]",
            "sku": {
                "name": "Standard",
                "tier": "Regional"
            },
            "zones": [
                "1",
                "2",
                "3"
            ],
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            }
        },
        {
            "type": "Microsoft.Network/routeTables",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('spokevm_rt_name')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "disableBgpRoutePropagation": false,
                "routes": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "0.0.0.0/0",
                            "nextHopType": "VirtualAppliance",
                            "nextHopIpAddress": "[variables('hubvm_nic_ip')]",
                            "hasBgpOverride": false
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('compute_api_version')]",
            "name": "[variables('hubvm_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('hubvm_nic_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('hubvm_name')]",
                    "adminUsername": "[parameters('admin_user')]",
                    "adminPassword": "[parameters('admin_password')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "customData": "[base64(variables('hubvm_custom_data'))]",
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('hubvm_nic_name'))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('compute_api_version')]",
            "name": "[variables('spokevm_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('spokevm_nic_name'))]"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "18.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage"
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[variables('spokevm_name')]",
                    "adminUsername": "[parameters('admin_user')]",
                    "adminPassword": "[parameters('admin_password')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true,
                        "patchSettings": {
                            "patchMode": "ImageDefault",
                            "assessmentMode": "ImageDefault"
                        }
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('spokevm_nic_name'))]"
                        }
                    ]
                }
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('hubvm_nsg_name'), '/Allow_Inbound_From_RFC1918')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hubvm_nsg_name'))]"
            ],
            "properties": {
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1010,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [
                    "10.0.0.0/8",
                    "172.16.0.0/12",
                    "192.168.0.0/16"
                ],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('hubvm_nsg_name'), '/default-allow-ssh')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hubvm_nsg_name'))]"
            ],
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('spokevm_nsg_name'), '/default-allow-ssh')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('spokevm_nsg_name'))]"
            ],
            "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            }
        },
        {
            "type": "Microsoft.Network/routeTables/routes",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('spokevm_rt_name'), '/default')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
            ],
            "properties": {
                "addressPrefix": "0.0.0.0/0",
                "nextHopType": "VirtualAppliance",
                "nextHopIpAddress": "192.168.0.4",
                "hasBgpOverride": false
            }
        },
        {
            "type": "Microsoft.Network/routeTables/routes",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('spokevm_rt_name'), '/mypc')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
            ],
            "properties": {
                "addressPrefix": "93.104.184.102/32",
                "nextHopType": "Internet",
                "hasBgpOverride": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('hub_vnet_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('hub_vnet_prefix')]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": []
                },
                "subnets": [
                    {
                        "name": "[variables('hub_subnet_name')]",
                        "properties": {
                            "addressPrefix": "[variables('hub_subnet_prefix')]",
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "enableDdosProtection": false
            }
        },
        {
            "apiVersion": "[variables('network_api_version')]",
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "name": "[concat(variables('hub_vnet_name'), '/hub2spoke')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('hub_vnet_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('spoke_vnet_name'))]"
            ],
            "location": "[resourceGroup().location]",
            "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": false,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('spoke_vnet_name'))]"
                }
            }
        },
        {
            "apiVersion": "[variables('network_api_version')]",
            "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
            "name": "[concat(variables('spoke_vnet_name'), '/spoke2hub')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('hub_vnet_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', variables('spoke_vnet_name'))]"
            ],
            "location": "[resourceGroup().location]",
            "properties": {
                "allowVirtualNetworkAccess": true,
                "allowForwardedTraffic": false,
                "allowGatewayTransit": false,
                "useRemoteGateways": false,
                "remoteVirtualNetwork": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('hub_vnet_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('hub_vnet_name'), '/vm')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('hub_vnet_name'))]"
            ],
            "properties": {
                "addressPrefix": "[variables('hub_subnet_prefix')]",
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('spoke_vnet_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('spoke_vnet_prefix')]"
                    ]
                },
                "dhcpOptions": {
                    "dnsServers": []
                },
                "subnets": [
                    {
                        "name": "vm",
                        "properties": {
                            "addressPrefix": "[variables('spoke_subnet_prefix')]",
                            "routeTable": {
                                "id": "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
                            },
                            "delegations": [],
                            "privateEndpointNetworkPolicies": "Disabled",
                            "privateLinkServiceNetworkPolicies": "Enabled"
                        }
                    }
                ],
                "enableDdosProtection": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[concat(variables('spoke_vnet_name'), '/vm')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('spoke_vnet_name'))]",
                "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
            ],
            "properties": {
                "addressPrefix": "[variables('spoke_subnet_prefix')]",
                "routeTable": {
                    "id": "[resourceId('Microsoft.Network/routeTables', variables('spokevm_rt_name'))]"
                },
                "delegations": [],
                "privateEndpointNetworkPolicies": "Disabled",
                "privateLinkServiceNetworkPolicies": "Enabled"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('hubvm_nic_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('hubvm_pip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('hub_vnet_name'), 'vm')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hubvm_nsg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfighubvm",
                        "properties": {
                            "privateIPAddress": "[variables('hubvm_nic_ip')]",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('hubvm_pip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('hub_vnet_name'), 'vm')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": true,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('hubvm_nsg_name'))]"
                }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[variables('network_api_version')]",
            "name": "[variables('spokevm_nic_name')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('spokevm_pip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('spoke_vnet_name'), 'vm')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('spokevm_nsg_name'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfigspokevm",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('spokevm_pip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('spoke_vnet_name'), 'vm')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('spokevm_nsg_name'))]"
                }
            }
        }
    ]
}
